--- a/portfolio/src/app/components/posts/posts.component.html
+++ b/portfolio/src/app/components/posts/posts.component.html
@@ -1,1 +1,90 @@
-<p>posts works!</p>
+        
+        
+    <div class="container-fluid">
+
+
+       
+        <!-- Intro row START -->
+        <div class="row text-center pb-4">
+
+            <div class="col-4 ">
+            </div>
+
+
+            <div class="col-12 col-md-4 pt-3">
+                <div class="msgIntro">
+                    My daily Diary !
+                </div>
+            </div>
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- Intro row END -->
+
+
+        <!-- Mywork row START -->
+        <div class="row pt-4">
+            <div class="col-4"></div>
+
+            <div class="col-12 col-md-4">
+                <div class="myTxtTitle" data-bs-toggle="collapse" data-bs-target="#accordionContent1" aria-expanded="false" aria-controls="accordionContent">
+                    01/07/24  -  Angular  -  Stage, INA
+                </div>
+
+                <div id="accordionContent1" class="collapse">
+                    <div class="myParagraph">
+                        <p>Mon premier jour à l'INA, ou Institut National de l'Audiovisuelle ou j'ai été pris en stage de développement sous la charge de Mounir Abib, Responsable du Chapter Développement, Direction Data et technologies. 
+                        Durant la matinée, j'ai rencontré les membres de l'équipes et visité les locaux. On m'a ensuite remis des documents pour en apprendre plus sur L'INA. 
+                        </p>
+
+                        <p>En début d'après midi, j'ai ensuite découvert le projet sur lequel j'allais travailler, "Projet page mots de passe Mélina". Ce projet consiste à passé en Angular une ancienne page internet en PHP Interne à l'Ina qui permettait aux employées de changer leurs mots de passe entreprise eux même. 
+                        Je devais reprendre toute les fonctionnionalités deja présente, et j'avais carte blanche pour crée une nouvelle page Angular. Cette page devra communiquer avec un service LDAP sur un Docker pour gérer les connections et utiliser PhpMyAdmin pour gérer la base de données des utilisateurs de l'entreprise.
+                        </p>
+
+                        <p>Après avoir pris connaissance du projet, j'ai donc commencer mon apprentissage d'Angular, car je ne connaissais nullement ce framework. Angular permet de crée des applications webs en typescript, une variante du javascript.</p>
+
+                        <p>Voici l'apparence original du site en php. </p> 
+
+                        <div class="myImgContainer pb-2">
+                            <img src="/assets/img/day1.png" alt="day1" class="myImg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4"></div>
+        </div>
+        <!-- Mywork row END -->
+
+
+        <!-- Mywork row START -->
+        <div class="row pt-4">
+            <div class="col-4"></div>
+
+            <div class="col-12 col-md-4">
+                <div class="myTxtTitle" data-bs-toggle="collapse" data-bs-target="#accordionContent2" aria-expanded="false" aria-controls="accordionContent">
+                    02/07/24  -  Angular  -  Stage, INA
+                </div>
+
+                <div id="accordionContent2" class="collapse">
+                    <div class="myParagraph">
+                        <p>Pour ce deuxième jour, j'ai passer ma matinée a travailler sur un site angular test afin d'apprendre les bases. J'ai appris l'organisation d'angular des components et comment chaque partis agis ensemble. </p>
+
+                        <div class="myImgContainer pb-2">
+                            <img src="/assets/img/day1.png" alt="day1" class="myImg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4"></div>
+        </div>
+        <!-- Mywork row END -->
+
+
+
+
+
+
+    </div>
